# fasl-trace-juridic-rag-chatbot

./: .env.example  .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml  start.sh  watcher.py
backend/alembic/: env.py
backend/alembic/versions/: 0000_initial_schema.py  0001_text_direction.py  0002_error_log_column.py  0003_failed_blocks_column.py  0004_llm_providers_table.py  0005_model_assignments_table.py  0006_is_system.py
backend/app/: utils.py
backend/app/api/v1/: router_chat.py  router_collection.py  router_document.py  router_health.py  router_llm_provider.py  router_model_assignment.py
backend/app/core/: config.py  database.py  milvus_client.py  security.py
backend/app/models/: __init__.py  base.py  chunk.py  collection.py  document.py  llm_provider.py  model_assignment.py
backend/app/schemas/: chat.py  document.py  llm_provider.py  model_assignment.py
backend/app/services/: chunking_service.py  crypto_service.py  embedding_service.py  llm_service.py  pdf_engine.py  pipeline_service.py  retrieval_pipeline.py  vector_store_service.py
backend/commands/: generate_openapi_schema.py
backend/tests/: conftest.py  test_documents.py  test_dual_access.py  test_health.py  test_ingestion_status.py  test_llm_providers.py  test_model_assignments.py  test_rtl_extraction.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  jest.config.ts  middleware.ts  next.config.ts  (+5 more)
(+79 files in other folders)
