[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "fastapi>=0.135.3",
    "flashrank>=0.2.0",
    "httpx>=0.28.1",
    "langchain>=1.2.14",
    "numpy<2.0",
    "onnxruntime>=1.15.0,<1.18.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymilvus>=2.4.0",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "watchdog>=5.0.3,<6",
    "coverage>=7.6",
    "ruff>=0.15.21"
]
